Support 'mac' architecture for system Flash installs OS X.

While component updated manifest.json have "x64" as the
x-ppapi-arch, the system PPAPI Flash install from Adobe
has "mac" as the x-ppapi-arch.

In order to correctly pick up the system Flash player on
OS X, add support for both architectures.

BUG=605983
TEST=run chromium on OS X with PPAPI Flash installed and verify Flash works.

Review-Url: https://codereview.chromium.org/1920763004
Cr-Commit-Position: refs/heads/master@{#390553}

Former-commit-id: 391d5d801dcc67144746630fa5d61540f4aeb86f